##Text encoding: utf-8

2010-03-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/theme.cc: fixed configuration issues when using a key file.
	* programs/3d/main.cc: ditto.
	* programs/crystal/main.cc: ditto.
	* ui/crystal/view-settings.ui: fixed minimum FoV.

2010-03-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-arrow.cc: implement the end at center feature.
	* plugins/paint/arrows/curvedarrowtool.cc: still more work on the
	end position.

2010-03-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-arrow.cc: implement the end position option.
	* libs/gcp/mechanism-arrow.h: ditto.
	* plugins/paint/arrows/curvedarrowtool.cc: more work on the end position
	(still not working).
	* plugins/paint/arrows/curvedarrowtool.h: ditto.
	* plugins/paint/arrows/curvedarrowtool.ui: ditto.
	* plugins/paint/arrows/gchempaint-arrows.schemas.in: ditto.

2010-03-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/Makefile.am: add a property page to the curved
	arrow tool.
	* plugins/paint/arrows/curvedarrowtool.cc: ditto.
	* plugins/paint/arrows/curvedarrowtool.h: ditto.
	* plugins/paint/arrows/curvedarrowtool.ui: ditto.

2010-03-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/curvedarrowtool.cc: various improvements.

2010-03-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: Use gcu::ReadFloat() and gcu::WriteFloat() for
	serialization.
	* libs/gcp/fragment.cc: use the fragment as client for the charge item.
	* libs/gcu/xml-utils.cc: make gcu::WriteFloat() locale independant.
	* plugins/paint/arrows/curvedarrowtool.cc: fixed orientation of arrows
	at start.

2010-03-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: Fixed typo.
	* libs/gcu/crystalatom.cc: don't crash if atomic numer is 0.
	* libs/gcu/xml-utils.cc: one more fix in ReadFloat().
	* plugins/loaders/cif/cif.cc: fixed an atom_label issue.